# api/swagger.yaml
@@ -142,10 +142,18 @@ paths:
       parameters:
         - $ref: "#/parameters/assign_client_consultant_payload"
       responses:
-        200:
+        202:
           description: "Adds an Agency Client Consultant"
+          headers:
+            Location:
+              description: "URL to retrieve the created agency client consultant"
+              type: string
+        400:
+          description: "Validation error. Usually caused by a missing or invalid parameter."
           schema:
-            $ref: "#/definitions/assign_client_consultant_payload_def"
+            $ref: "#/definitions/add_agency_client_consultant_validation_error_model"
+        401:
+          $ref: "#/responses/unauthorize_error_model"
         default:
           $ref: "#/responses/server_error_model"
       summary: "Adds an Agency Client Consultant"
@@ -656,6 +664,42 @@ definitions:
                 type: "string"
             description:
               type: "string"
+  add_agency_client_consultant_validation_error_model:
+    type: object
+    required:
+      - code
+      - message
+    properties:
+      code:
+        type: string
+        enum:
+          - REQUIRED
+      message:
+        type: string
+      errors:
+        type: array
+        items:
+          type: object
+          required:
+            - code
+            - message
+            - path
+          properties:
+            code:
+              type: string
+              enum:
+                - INVALID_TYPE
+                - PATTERN
+                - OBJECT_ADDITIONAL_PROPERTIES
+                - OBJECT_MISSING_REQUIRED_PROPERTY
+            message:
+              type: string
+            path:
+              type: array
+              items:
+                type: string
+            description:
+              type: string
 responses:
   unauthorize_error_model:
     description: "Failed to authenticate the incoming request"
